--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,108 @@
+/*
+#0D5794
+  #fff
+  #000
+  #ff0
+*/
+
+@import url("https://fonts.googleapis.com/css2?family=Lavishly+Yours&family=Roboto+Mono:wght@200&family=Source+Code+Pro:wght@400;500&display=swap");
+
+* {
+  font-family: "Lavishly Yours", cursive;
+
+  font-family: "Roboto Mono", monospace;
+
+  font-family: "Source Code Pro", monospace;
+}
 body {
+  background-color: #000;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+a {
+  color: #ff0;
+  text-decoration: none;
+}
+ul {
+  list-style: none;
+}
+li {
+  list-style: none;
+  margin: 9px;
+}
+.navBarContainer {
+  background-color: black;
+  color: #ff0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 120px;
+}
+.itemListContainer {
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(121, 121, 4, 1) 24%,
+    rgba(231, 231, 7, 1) 40%,
+    rgba(255, 255, 4, 1) 50%,
+    rgba(227, 227, 0, 1) 60%,
+    rgba(108, 108, 0, 1) 80%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  height: 80px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  color: #000;
+}
+
+.cartWidgetContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 25%;
+}
+
+.h1NavBar {
+  display: flex;
+  width: 25%;
+  align-items: center;
+  justify-content: center;
+}
+
+.ulNavBar {
+  display: flex;
+  width: 25%;
+  align-items: center;
+  justify-content: center;
+  padding: 1px;
+}
+
+.itemGreeting {
+  justify-content: center;
+  align-items: center;
+  display: block;
+  font-size: 30px;
+}
+.cartWidgetContainer img:hover {
+  transform: scale(1.2);
+  filter: drop-shadow(2px 2px 1px rgba(255, 255, 255, 0.735));
+}
+a:hover {
+  color: orange;
+}
+li:hover {
+  transform: scale(1.2);
 }
