--- a/src/index.css
+++ b/src/index.css
@@ -106,3 +106,35 @@ a:hover {
 li:hover {
   transform: scale(1.2);
 }
+
+@media (min-width: 450px) and  (max-width:1100px) {
+ 
+  .navBarContainer{
+    margin-top: 25px;
+    display: flex;
+    flex-flow: column;
+    height: auto;
+  }
+  .ulNavBar {
+    display: flex;
+    width: 95%;
+    align-items: center;
+    justify-content: center;
+    padding: 1px;
+  }
+  .h1NavBar {
+    background-color: #222;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+  }
+  .cartWidgetContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 95%;
+  }
+
+}
