--- a/src/index.css
+++ b/src/index.css
@@ -89,7 +89,27 @@ li {
   justify-content: center;
   padding: 1px;
 }
+.contador{
+  color: #ff0;
+}
+.contadorContainer{
+display: flex;
+flex-flow: row;
+align-items: center;
+gap: 15px;
+height: 25px;
+padding: 5px;
+border-radius: 9px;
+box-shadow: 1px 1px 1px black;
+}
+.contadorContainer button{
 
+  background-color: #000;
+  border: #000;
+  color: #ff0;
+  border-radius: 7px;
+}
+  
 .itemGreeting {
   justify-content: center;
   align-items: center;
@@ -106,6 +126,54 @@ a:hover {
 li:hover {
   transform: scale(1.2);
 }
+.cardContainer{
+display: flex;
+flex-flow: row wrap;
+color: #777777;
+
+}
+.cardListContainer{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  color: #ff0;
+  width: 100%;
+}
+.cardContainer img{
+  max-width: 300px;
+  max-height: 300px;
+
+}
+.individualCard{
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainContainer{
+  display: flex;
+  flex-flow: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.addGeneral{
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+gap: 15px;
+}
+.addToCart{
+  background-color: #000;
+  color: #777;
+  border: none;
+  box-shadow: 1px 1px 8px rgba(255, 255, 0, 0.502);
+ 
+}
+
+
 
 @media (min-width: 450px) and  (max-width:1100px) {
  
@@ -135,6 +203,41 @@ li:hover {
     align-items: center;
     justify-content: space-evenly;
     width: 95%;
+  }
+
+}
+@media (max-width: 449px){
+  .navBarContainer{
+    margin-top: 25px;
+    display: flex;
+    flex-flow: column;
+    height: auto;
+  }
+  .ulNavBar {
+    display: flex;
+    width: 95%;
+    align-items: center;
+    justify-content: center;
+    padding: 1px;
+  }
+  .h1NavBar {
+    background-color: #222;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+  }
+  .cartWidgetContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 95%;
+  }
+  ul {
+    display: flex;
+    flex-flow: column wrap;
+    list-style: none;
   }
 
 }
