--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@
 */
 
 @import url("https://fonts.googleapis.com/css2?family=Lavishly+Yours&family=Roboto+Mono:wght@200&family=Source+Code+Pro:wght@400;500&display=swap");
-
+.bodyTotal{
+  background-color: #000;
+}
 * {
   font-family: "Lavishly Yours", cursive;
 
@@ -29,8 +31,11 @@ code {
     monospace;
 }
 a {
-  color: #ff0;
+  color: #777;
   text-decoration: none;
+}
+a img{
+  width: 50px;
 }
 ul {
   list-style: none;
@@ -40,33 +45,23 @@ li {
   margin: 9px;
 }
 .navBarContainer {
-  background-color: black;
-  color: #ff0;
+  background-color: rgb(13, 13, 13);
+  color: #777;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
   align-items: center;
   height: 120px;
 }
-.itemListContainer {
-  background: rgb(0, 0, 0);
-  background: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(121, 121, 4, 1) 24%,
-    rgba(231, 231, 7, 1) 40%,
-    rgba(255, 255, 4, 1) 50%,
-    rgba(227, 227, 0, 1) 60%,
-    rgba(108, 108, 0, 1) 80%,
-    rgba(0, 0, 0, 1) 100%
-  );
+/* .itemListContainer {
+  background: rgba(119, 119, 119, 0.074);
   height: 80px;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  color: #000;
-}
+  color: rgb(255, 162, 0);
+} */
 
 .cartWidgetContainer {
   display: flex;
@@ -90,38 +85,41 @@ li {
   padding: 1px;
 }
 .contador{
-  color: #ff0;
+  color: rgb(255, 162, 0);
 }
 .contadorContainer{
 display: flex;
 flex-flow: row;
 align-items: center;
 gap: 15px;
-height: 25px;
+height: 15px;
 padding: 5px;
 border-radius: 9px;
 box-shadow: 1px 1px 1px black;
+}
+.contadorContainer h2{
+  height: max-content;
 }
 .contadorContainer button{
 
   background-color: #000;
   border: #000;
-  color: #ff0;
+  color: rgb(255, 162, 0);
   border-radius: 7px;
 }
   
-.itemGreeting {
+/* .itemGreeting {
   justify-content: center;
   align-items: center;
   display: block;
   font-size: 30px;
-}
+} */
 .cartWidgetContainer img:hover {
   transform: scale(1.2);
-  filter: drop-shadow(2px 2px 1px rgba(255, 255, 255, 0.735));
+  filter: drop-shadow(2px 2px 1px rgba(255, 0, 0, 0.353));
 }
 a:hover {
-  color: orange;
+  color: rgb(255, 162, 0);
 }
 li:hover {
   transform: scale(1.2);
@@ -139,10 +137,13 @@ color: #777777;
   align-items: center;
   color: #ff0;
   width: 100%;
+ gap: 10px;
 }
 .cardContainer img{
-  max-width: 300px;
-  max-height: 300px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
 
 }
 .individualCard{
@@ -150,6 +151,7 @@ color: #777777;
   flex-flow: column wrap;
   justify-content: center;
   align-items: center;
+  color: #777777;
 }
 
 .mainContainer{
@@ -163,14 +165,36 @@ color: #777777;
   flex-flow: column wrap;
   justify-content: center;
   align-items: center;
-gap: 15px;
 }
 .addToCart{
   background-color: #000;
   color: #777;
   border: none;
-  box-shadow: 1px 1px 8px rgba(255, 255, 0, 0.502);
+  /* box-shadow: 0px 0px 2px rgba(255, 162, 0, 0.421); */
  
+}
+.footerContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+   height: 150px;
+   background-color: rgb(13, 13, 13);
+   margin-top: 25px;
+   
+}
+.footer1Div{
+  display: flex;
+}
+.infoTextDown{
+  width: 450px;
+  margin: 15px;
+}
+.detailContainer{
+  width: 100%;
+}
+
+.individualCard h4{
+  width: 60%;
 }
 
 
@@ -202,7 +226,7 @@ gap: 15px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    width: 95%;
+    width: 100%;
   }
 
 }
@@ -215,7 +239,7 @@ gap: 15px;
   }
   .ulNavBar {
     display: flex;
-    width: 95%;
+    width: 100%;
     align-items: center;
     justify-content: center;
     padding: 1px;
