--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,9 @@ li {
   list-style: none;
   margin: 9px;
 }
+h5{
+  color: #777;
+}
 .navBarContainer {
   background-color: rgb(13, 13, 13);
   color: #777;
@@ -197,7 +200,22 @@ color: #777777;
   width: 60%;
 }
 
+.cartItemContainer{
+  display: flex;
+  flex-flow: column nowrap;
+  background-color: #000;
+  color: #777;
+}
+.cartItem{
 
+  color: #777;
+}
+.cartContainer{
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+}
 
 @media (min-width: 450px) and  (max-width:1100px) {
  
