--- a/src/index.css
+++ b/src/index.css
@@ -156,6 +156,9 @@ color: #777777;
   align-items: center;
   color: #777777;
 }
+.individualCard img{
+  max-width: 800px;
+}
 
 .mainContainer{
   display: flex;
@@ -209,7 +212,7 @@ color: #777777;
   align-items: center;
 }
 .cartItemContainer img{
-  width: 50%;
+  max-width: 90%;
 }
 .cartItem{
 
@@ -244,6 +247,7 @@ color: #ff0;
  
   .navBarContainer{
     margin-top: 25px;
+    padding-top: 20px;
     display: flex;
     flex-flow: column;
     height: auto;
@@ -272,11 +276,16 @@ color: #ff0;
   .cartItemContainer img{
     width: 75%;
   }
+  .individualCard img{
+    max-width: 90%;
+  }
+  
 
 }
 @media (max-width: 449px){
   .navBarContainer{
     margin-top: 25px;
+    padding-top: 20px;
     display: flex;
     flex-flow: column;
     height: auto;
@@ -311,4 +320,7 @@ color: #ff0;
     width: 95%;
   }
 
+  .individualCard img{
+    max-width: 90%;
+  }
 }
