--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   #ff0
 */
 
-@import url("https://fonts.googleapis.com/css2?family=Lavishly+Yours&family=Roboto+Mono:wght@200&family=Source+Code+Pro:wght@400;500&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Lavishly+Yours&family=Roboto+Mono:wght@200&family=Source+Code+Pro:wght@400;500&display=swap"); */
 .bodyTotal{
   background-color: #000;
 }
