--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -324,3 +324,52 @@ color: #ff0;
     max-width: 90%;
   }
 }
+
+.closeModal{
+  position: fixed !important;
+  z-index: 99999;
+  top: 30px;
+  right:30px;
+  border: none;
+  outline: none;
+  background: red;
+  color: white;
+  width: 40px;
+  height:40px;
+  border-radius:50%;
+  font-size: 19px;
+  cursor:pointer;
+}
+
+.closeModal:hover{
+  background: rgb(248, 64, 64);
+}
+
+.bill{
+  position: fixed !important;
+  z-index: 9999;
+  top: 0;
+  height: 100vh;
+  backdrop-filter: blur(7px);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 100px;
+}
+
+.bill > div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  color: whitesmoke;
+  gap: 15px;
+}
+
+.bill >div >div{
+  width: 250px;
+}
+
+.bill >div >div >img{
+  width: 100%;
+}
